--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       font-size:${pageWidth/100}px
     }</style>
     `
-  
   </script>
 </head>
 <body>
@@ -24,6 +23,7 @@
     root.style.width=pageWidth+'px'
     root.style.height=pageHeight+'px'
     root.style.marginTop=(deviceHeight-pageHeight)/2+'px'
+    root.style.marginBottom=(deviceHeight-pageHeight)/2+'px'
     document.write(string)
 </script>
 <script type="module" src="/src/main.tsx"></script>
